--- a/todo/templates/all.html
+++ b/todo/templates/all.html
@@ -6,13 +6,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 p-8">
-    <div class="max-w-4xl mx-auto">
+    <div class="max-w-6xl mx-auto">
       <h1 class="text-3xl font-bold mb-6">Todo List</h1>
-      <a
-        href="create.html"
-        class="mb-4 inline-block px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700"
-        >Create New Todo</a
-      >
+      <a href="/todo/create" class="mb-4 inline-block px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Create New Todo</a>
+
       <table class="min-w-full bg-white rounded shadow">
         <thead>
           <tr>
@@ -27,31 +24,32 @@
         </thead>
         <tbody>
           <!-- Example Todo Row -->
-          <tr>
-            <td class="py-2 px-4 border-b text-center">1</td>
-            <td class="py-2 px-4 border-b">Buy milk</td>
-            <td class="py-2 px-4 border-b">2 liters of milk for breakfast</td>
-            <td class="py-2 px-4 border-b text-gray-500 italic">urgent</td>
-            <td class="py-2 px-4 border-b">2025-07-14</td>
-            <td class="py-2 px-4 border-b">2025-07-14</td>
-            <td class="py-2 px-4 border-b flex gap-2">
-              <a
-                href="view.html?id=1"
-                class="px-2 py-1 bg-green-500 text-white rounded hover:bg-green-600"
-                >View</a
-              >
-              <a
-                href="update.html?id=1"
-                class="px-2 py-1 bg-yellow-500 text-white rounded hover:bg-yellow-600"
-                >Edit</a
-              >
-              <button
-                class="px-2 py-1 bg-red-500 text-white rounded hover:bg-red-600"
-              >
-                Delete
-              </button>
-            </td>
-          </tr>
+          {% for todo in todos %}
+            <tr>
+              <td class="py-2 px-4 border-b text-center">{{ forloop.counter }}</td>
+              <td class="py-2 px-4 border-b">{{ todo.text }}</td>
+              <td class="py-2 px-4 border-b">{{ todo.description }}</td>
+              <td class="py-2 px-4 border-b text-gray-500 italic">
+                {% if todo.meta %}
+                  {{ todo.meta }}
+                {% else %}
+                  -
+                {% endif %}
+              </td>
+              <td class="py-2 px-4 border-b">{{ todo.created_at }}</td>
+              <td class="py-2 px-4 border-b">{{ todo.updated_at }}</td>
+              <td class="py-2 px-4 border-b flex gap-2">
+                <a href="{% url 'single' todo.id %}" class="px-2 py-1 bg-green-500 text-white rounded hover:bg-green-600">View</a>
+                <a href="{% url 'update' todo.id %}" class="px-2 py-1 bg-yellow-500 text-white rounded hover:bg-yellow-600">Edit</a>
+                <form method="POST" action="{% url 'delete' todo.id %}">
+                  {% csrf_token %}
+
+                  <button class="px-2 py-1 bg-red-500 text-white rounded hover:bg-red-600">Delete</button>
+                </form>
+              </td>
+            </tr>
+          {% endfor %}
+
           <!-- More rows here -->
         </tbody>
       </table>
