--- a/todo/templates/create.html
+++ b/todo/templates/create.html
@@ -14,11 +14,7 @@
         </div>
       {% endif %}
 
-      {% if errors %}
-        {{ errors }}
-      {% endif %}
-
-      <form method="post" action="">
+      <form method="post" action="{% url 'create' %}">
         {% csrf_token %}
         <div class="mb-4">
           <label class="block mb-1 font-medium">Text</label>
